# appliances

./: .gitignore  README.md  digitalocean.pkr.hcl  pyproject.toml  requirements.yml  site.yaml
.github/workflows/: build-do.yml
roles/goauthentik.appliance/files/: docker-compose.override.yml
roles/goauthentik.appliance/files/scripts/: ak
roles/goauthentik.appliance/files/update-motd.d/: 99-one-click
roles/goauthentik.appliance/tasks/: app.yaml
