[tool.poetry]
name = "authentik-appliances"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.2.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = "^25.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
