[project]
name = "authentik-appliances"
version = "0.1.0"
description = ""
package-mode = false
requires-python = "==3.12.*"
dependencies = [
    "ansible>=11.2.0"
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=25.1.3"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"